--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,10 +1,10 @@
 .home{
-    flex-grow: 1;
     margin-top: 10vh;
     min-width:100%;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+    min-height: 100%;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
 }
 
 .home .title{
@@ -17,28 +17,18 @@
     line-height: 50px;
 }
 
-.home .person{
-    width: 100%;
-    margin-top: 20px;
-}
-
 .home .person img{
     width: 100%;
+    justify-items: center;
 }
 
-@media (min-width: 800px){
-    .home{
-        flex-direction: row;
-        justify-content: space-between;
+@media (max-width: 768px) {
+    .home {
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr;
     }
-    .home .title,
-    .home .person{
-        width: 50%;
-        margin-top: 0;
-        text-align: left;
-        font-size: 25px;
-    }
+
     .home .person img{
         width: 100%;
     }
-}
+  }
