--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 *{
-  padding: 0;
   color: #E5FCC2;
+  background-color: #362f2f;
 }
 body {
-  margin: 0;
+
+  padding: 1%;
   font-family: 'Fira Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
