adjust header links to be centered in smaller view

--- a/src/components/HeaderLink/style.css
+++ b/src/components/HeaderLink/style.css
@@ -24,3 +24,9 @@
   .headerlink-no-link {
     pointer-events: none;
   }
+
+  @media(max-width:768px){
+      .headerlink-title{
+          justify-content: center;
+      }
+  }
